ocaml/day14/1
File "puzzle_bin.ml", line 2, characters 9-33:
2 | let () = Puzzle.solve_part1 input |> Printf.printf "Part 1 result: %d\n"
             ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type "unit" but an expression was expected of type
         "int"
File "puzzle_bin.ml", line 2, characters 9-33:
2 | let () = Puzzle.solve_part1 input |> Printf.printf "Part 1 result: %d\n"
             ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type "unit" but an expression was expected of type
         "int"
make: *** [dev] Error 1
make: *** [dev] Error 1
